Внес исправления в блок about

--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -8,7 +8,8 @@
     <title>ДЗ2</title>
     <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
     <div class="container">
@@ -22,7 +23,9 @@
                     <li>Associate the page with the payment system</li>
                 </ul>
             </div>
-            <div class="col-md-6"> <img src="img/image_white.jpg" alt="Картинка"> </div>
+            <div class="col-md-6">
+             <img src="img/image_white.jpg" alt="Картинка">
+            </div>
         </header>
         <div class="about">
             <div class="col-md-7">
@@ -30,38 +33,56 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis facilis fuga, illo at. Natus eos, eligendi illum rerum omnis porro ex, magni, explicabo veniam incidunt in quam sapiente ut ipsum.</p>
                 <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
             </div>
-            <div class="col-md-5"> <img src="img/image_dark_blue_big.jpg" alt="Картинка"> </div>
+            <div class="col-md-5">
+             <img src="img/image_dark_blue_big.jpg" alt="Картинка"> 
+            </div>
         </div>
         <div class="pluses">
             <h2>Dignity and pluses product</h2>
-            <div class="col-md-6">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</div>
-            <div class="col-md-6">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</div>
-            <div class="col-md-6">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</div>
-            <div class="col-md-6">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</div>
-            <div class="col-md-6">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</div>
-            <div class="col-md-6">Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.</div>
+            <div class="col-md-6">
+                Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.
+            </div>
+            <div class="col-md-6">
+                Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.
+            </div>
+            <div class="col-md-6">
+                Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.
+            </div>
+            <div class="col-md-6">
+                Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.
+            </div>
+            <div class="col-md-6">
+                Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.
+            </div>
+            <div class="col-md-6">
+                Delectus dolorem vero quae beatae quasi dolor deserunt iste amet atque, impedit iure placeat, ullam. Reprehenderit aliquam, nemo cum velit ratione perferendis quas, maxime, quaerat porro totam, dolore minus inventore.
+            </div>
         </div>
         <div class="screen">
             <h2>Scrinshots</h2>
-            <div class="col-md-6"> <img src="img/image_dark_blue_small.jpg" alt="картинка">
+            <div class="col-md-6"> 
+                <img src="img/image_dark_blue_small.jpg" alt="картинка">
                 <article>
                     <h3>The description for the image</h3>
                     <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                 </article>
             </div>
-            <div class="col-md-6"> <img src="img/image_dark_blue_small.jpg" alt="картинка">
+            <div class="col-md-6"> 
+                <img src="img/image_dark_blue_small.jpg" alt="картинка">
                 <article>
                     <h3>The description for the image</h3>
                     <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                 </article>
             </div>
-            <div class="col-md-6"> <img src="img/image_dark_blue_small.jpg" alt="картинка">
+            <div class="col-md-6"> 
+                <img src="img/image_dark_blue_small.jpg" alt="картинка">
                 <article>
                     <h3>The description for the image</h3>
                     <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
                 </article>
             </div>
-            <div class="col-md-6"> <img src="img/image_dark_blue_small.jpg" alt="картинка">
+            <div class="col-md-6"> 
+                <img src="img/image_dark_blue_small.jpg" alt="картинка">
                 <article>
                     <h3>The description for the image</h3>
                     <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel exercitationem ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde perferendis nemo debitis dolor.</p>
@@ -70,19 +91,23 @@
         </div>
         <div class="reviews">
             <h2>Reviews</h2>
-            <div class="col-md-6"> <img src="img/userpic.png" alt="Картинка">
+            <div class="col-md-6"> 
+                <img src="img/userpic.png" alt="Картинка">
                 <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
                     <br><span>Lourens S.</span></p>
             </div>
-            <div class="col-md-6"> <img src="img/userpic.png" alt="Картинка">
+            <div class="col-md-6"> 
+                <img src="img/userpic.png" alt="Картинка">
                 <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
                     <br><span>Lourens S.</span></p>
             </div>
-            <div class="col-md-6"> <img src="img/userpic.png" alt="Картинка">
+            <div class="col-md-6"> 
+                <img src="img/userpic.png" alt="Картинка">
                 <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
                     <br><span>Lourens S.</span></p>
             </div>
-            <div class="col-md-6"> <img src="img/userpic.png" alt="Картинка">
+            <div class="col-md-6"> 
+                <img src="img/userpic.png" alt="Картинка">
                 <p>Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?
                     <br><span>Lourens S.</span></p>
             </div>
@@ -97,7 +122,8 @@
                         <li>Тemo facere rem vitae odit;</li>
                         <li>Cum odio, iste quia doloribus autem;</li>
                         <li>Aperiam nulla ea neque.</li>
-                    </ol> <a href="#">BUY</a> </article>
+                    </ol> <a href="#">BUY</a> 
+                </article>
                 <article class="col-md-3">
                     <h3>Premium</h3> <span>$150</span>
                     <ol>
@@ -109,7 +135,8 @@
                         <li>Тemo facere rem vitae odit;</li>
                         <li>Cum odio, iste quia doloribus autem;</li>
                         <li>Aperiam nulla ea neque.</li>
-                    </ol> <a href="#">BUY</a></article>
+                    </ol> <a href="#">BUY</a>
+                </article>
                 <article class="col-md-3">
                     <h3>Lux</h3> <span>$200</span>
                     <ol>
@@ -125,24 +152,29 @@
                         <li>Тemo facere rem vitae odit;</li>
                         <li>Cum odio, iste quia doloribus autem;</li>
                         <li>Aperiam nulla ea neque.</li>
-                    </ol> <a href="#">BUY</a> </article>
+                    </ol> <a href="#">BUY</a>
+                </article>
             </div>
         </div>
         <footer>
-           <h2>Contacts</h2>
+            <h2>Contacts</h2>
             <div class="feedback">
                 <form action="#" class="col-md-5">
                     <input type="text" name="name" placeholder="Your name:">
                     <input type="text" name="email" placeholder="Your email:">
                     <textarea name="message" placeholder="Your message:"></textarea>
-                    <input type="submit" value="Send"> </form> <address class="col-md-3">
-                <div class="skype">here_your_login_skype</div>
-                <div class="icq">279679659</div>
-                <div class="email">psdhtmlcss@mail.ru</div>
-                <div class="phone">80 00 4568 55 55</div>
-                <div class=social>lfigx</div>
-            </address></div>
-            <h4>Copyright © 2014 Product name · PSD HTML CSS</h4> </footer>
+                    <input type="submit" value="Send">
+                </form>
+                <address class="col-md-3">
+                    <div class="skype">here_your_login_skype</div>
+                    <div class="icq">279679659</div>
+                    <div class="email">psdhtmlcss@mail.ru</div>
+                    <div class="phone">80 00 4568 55 55</div>
+                    <div class=social>lfigx</div>
+                </address>
+            </div>
+            <h4>Copyright © 2014 Product name · PSD HTML CSS</h4>
+        </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
